test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/multiple_impl/src/main.sw
contract;

dep testlib;

abi TestContr {
    fn foo();
}

fn foo() {
   testlib::foo();
}

impl TestContr for Contract {
    fn foo() {
       foo();
    }
}

fn main() {

}
