test/src/e2e_vm_tests/test_programs/should_fail/no_self_in_method_provided_by_abi/src/main.sw
contract;

abi MyContract {
    fn foo();
} {
    fn bar(self) {
    }
}

